--- a/WebLibrary/WebApp/Views/Auth/Login.cshtml
+++ b/WebLibrary/WebApp/Views/Auth/Login.cshtml
@@ -1,5 +1,11 @@
 ﻿@model BL.Viewmodels.LoginVM
 
+@{
+    ViewData["Title"] = "Register";
+}
+
+<h2>Login</h2>
+
 <body class="bg-light">
     <div class="container mt-5">
         <div class="row justify-content-center">
