--- a/WebLibrary/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebLibrary/WebApp/Views/Shared/_Layout.cshtml
@@ -32,12 +32,22 @@
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Book" asp-action="Index">
-                                    <i class="fas fa-book"></i> Books (CRUD)
+                                    <i class="fas fa-book"></i> Books
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Genre" asp-action="Index">
+                                    <i class="fas fa-layer-group"></i> Genres
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Location" asp-action="Index">
-                                    <i class="fas fa-map-marker-alt"></i> Locations (CRUD)
+                                    <i class="fas fa-map-marker-alt"></i> Locations
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="BookLocation" asp-action="Index">
+                                    <i class="fas fa-book"></i> <i class="fas fa-map-marker-alt"></i> BookLocations
                                 </a>
                             </li>
                         }
@@ -73,6 +83,11 @@
                             <li class="nav-item">
                                 <a class="nav-link text-primary" href="/Auth/Login">
                                     <i class="fas fa-sign-in-alt"></i> Login
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-primary" href="/Auth/Register">
+                                    <i class="fas fa-user-plus"></i> Register
                                 </a>
                             </li>
                         }
