--- a/WebLibrary/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebLibrary/WebApp/Views/Shared/_Layout.cshtml
@@ -40,23 +40,13 @@
                                     <i class="fas fa-layer-group"></i> Genres
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Location" asp-action="Index">
-                                    <i class="fas fa-map-marker-alt"></i> Locations
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="BookLocation" asp-action="Index">
-                                    <i class="fas fa-book"></i> <i class="fas fa-map-marker-alt"></i> BookLocations
-                                </a>
-                            </li>
                         }
 
                         @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Reservation" asp-action="Index">
-                                    <i class="fas fa-book"></i> My Reservations
+                                    <i class="fas fa-book"></i> Reservations
                                 </a>
                             </li>
                         }
