--- a/WebLibrary/WebApp/Views/Book/Create.cshtml
+++ b/WebLibrary/WebApp/Views/Book/Create.cshtml
@@ -35,17 +35,30 @@
                 <span asp-validation-for="GenreId" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <label>Locations</label>
-                @for (int i = 0; i < Model.Locations.Count; i++)
+             <div class="form-group">
+    <label>Locations</label>
+    @for (int i = 0; i < Model.Locations.Count; i++)
+    {
+        var location = Model.Locations[i];
+        var disabledAttribute = location.IsAvailable ? "" : "disabled";
+
+        <div class="form-check">
+            <input type="hidden" asp-for="Locations[i].Id" />
+            <input 
+                type="checkbox" 
+                class="form-check-input" 
+                asp-for="Locations[i].IsChecked" 
+                ?@disabledAttribute />
+            <label class="form-check-label">
+                @location.Name
+                @if (!location.IsAvailable)
                 {
-                    <div class="form-check">
-                        <input type="hidden" asp-for="Locations[i].Id" />
-                        <input type="checkbox" class="form-check-input" asp-for="Locations[i].IsChecked" />
-                        <label class="form-check-label">@Model.Locations[i].Name</label>
-                    </div>
+                    <span class="text-muted">(Reserved)</span>
                 }
-            </div>
+            </label>
+        </div>
+    }
+</div>
 
             <button type="submit" class="btn btn-primary">Create</button>
         </form>
