--- a/WebLibrary/WebApp/Views/Book/Index.cshtml
+++ b/WebLibrary/WebApp/Views/Book/Index.cshtml
@@ -12,7 +12,7 @@
             <th>Name</th>
             <th>Author</th>
             <th>Genre</th>
-            <th>Availability</th>
+            <th>Available</th>
             <th>Actions</th>
         </tr>
     </thead>
