--- a/WebLibrary/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebLibrary/WebApp/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Profile">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="Index">
                                     <i class="fas fa-user"></i> Profile
                                 </a>
                             </li>
