--- a/WebLibrary/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebLibrary/WebApp/Views/Shared/_Layout.cshtml
@@ -40,6 +40,11 @@
                                     <i class="fas fa-layer-group"></i> Genres
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Location" asp-action="Index">
+                                    <i class="fas fa-layer-group"></i> Locations
+                                </a>
+                            </li>
                         }
 
                         @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
