--- a/WebLibrary/WebApp/Views/Genre/Create.cshtml
+++ b/WebLibrary/WebApp/Views/Genre/Create.cshtml
@@ -1,12 +1,11 @@
-﻿@model BL.Models.Genre
+﻿@model BL.Viewmodels.GenreVM
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create genre";
 }
 
-<h1>Create</h1>
+<h2>Create genre</h2>
 
-<h4>Genre</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
