--- a/WebLibrary/WebApp/Views/Genre/Index.cshtml
+++ b/WebLibrary/WebApp/Views/Genre/Index.cshtml
@@ -1,13 +1,13 @@
-﻿@model IEnumerable<BL.Models.Genre>
+﻿@model IEnumerable<BL.Viewmodels.GenreVM>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Genres";
 }
 
-<h1>Index</h1>
+<h1>Genres</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New Genre</a>
 </p>
 <table class="table">
     <thead>
@@ -26,7 +26,6 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
