--- a/WebLibrary/WebApp/Views/Genre/Delete.cshtml
+++ b/WebLibrary/WebApp/Views/Genre/Delete.cshtml
@@ -1,10 +1,10 @@
-﻿@model BL.Models.Genre
+﻿@model BL.Viewmodels.GenreVM
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete genre";
 }
 
-<h1>Delete</h1>
+<h2>Delete genre</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
