--- a/WebLibrary/WebApp/Views/Location/Create.cshtml
+++ b/WebLibrary/WebApp/Views/Location/Create.cshtml
@@ -1,12 +1,11 @@
-﻿@model BL.Models.Location
+﻿@model BL.Viewmodels.LocationCrudVM
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create location";
 }
 
-<h1>Create</h1>
+<h2>Create location</h2>
 
-<h4>Location</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
