--- a/WebLibrary/WebApp/Views/Location/Index.cshtml
+++ b/WebLibrary/WebApp/Views/Location/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<BL.Models.Location>
+﻿@model IEnumerable<BL.Viewmodels.LocationCrudVM>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Locations";
 }
 
-<h1>Index</h1>
+<h1>Locations</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -26,7 +26,6 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
