--- a/WebLibrary/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebLibrary/WebApp/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Location" asp-action="Index">
-                                    <i class="fas fa-layer-group"></i> Locations
+                                    <i class="fa-solid fa-location-dot"></i> Locations
                                 </a>
                             </li>
                         }
