--- a/WebLibrary/WebApp/Views/Home/Index.cshtml
+++ b/WebLibrary/WebApp/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<BL.Viewmodels.BookIndexVM>
 @{
-    ViewData["Title"] = "Reserve book";
+    ViewData["Title"] = "Landing page";
 }
 
 <div class="container mt-5">
